# abcd-microstructure-pipelines

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  README.md  example-notebook2.py  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: ci.yml
docs/: conf.py  index.md
notebooks/: README.md  example-group-template.py  example-pipeline.py
src/abcd_microstructure_pipelines/: masks.py  run.py
src/abcdmicro/: __init__.py  build_template.py  csd.py  denoise.py  dti.py  dwi.py  event.py  fods.py  io.py  masks.py  noddi.py  reg.py  resource.py  run.py  tractseg.py  util.py
src/kwneuro/: __init__.py  build_template.py  csd.py  denoise.py  dti.py  dwi.py  io.py  masks.py  noddi.py  reg.py  resource.py  run.py  tractseg.py  util.py
tests/: test_build_template.py  test_csd.py  test_deep_equal.py  test_dwi.py  test_event.py  test_io.py  test_masks.py  test_noddi.py  test_package.py  test_reg.py  test_resource.py  test_run.py  test_tractseg.py
